--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿backports.entry-points-selectable==1.1.0
+backports.entry-points-selectable==1.1.0
 certifi==2021.5.30
 charset-normalizer==2.0.4
 click==8.0.1
@@ -18,5 +18,3 @@ six==1.16.0
 urllib3==1.26.6
 virtualenv==20.7.2
 Werkzeug==2.0.1
-numpy==1.21.2
-catboost
