--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,8 @@ six==1.16.0
 urllib3==1.26.6
 virtualenv==20.7.2
 Werkzeug==2.0.1
+numpy
+train_test_split
+RandomUnderSampler
+RandomOverSampler
+RandomForestClassifier
