--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,4 @@ urllib3==1.26.6
 virtualenv==20.7.2
 Werkzeug==2.0.1
 numpy
-train_test_split
-RandomUnderSampler
-RandomOverSampler
-RandomForestClassifier
+catboost
